Adição da transação de simulação de empréstimo
