# api/swagger.yaml
@@ -4,13 +4,13 @@ info:
   description: "Modelo de API para transações da Saque e Pague. O parceiro interessado\
     \ deve implementar as operações desejadas para que a SeP consiga se comunicar\
     \ com o mesmo."
-  version: "1.19.4"
+  version: "1.19.6"
   title: "Saque e Pague Transacional"
   contact:
     name: "Time Saque e Pague"
     url: "http://www.saqueepague.com.br"
 host: "api-saqueepague.sensedia.com"
-basePath: "/saqueepague/SepTransaction/1.19.4"
+basePath: "/saqueepague/SepTransaction/1.19.6"
 tags:
 - name: "Deposito com Cartao"
   description: "Transações necessárias para efetuar um Depósito com Cartão."
@@ -379,6 +379,52 @@ paths:
           description: "Retorno com sucesso ou com Erro de negócio."
           schema:
             $ref: "#/definitions/consultaParcelasEmprestimoResp"
+        400:
+          description: "Bad Request ou Erro interno ao qual inviabilizou uma resposta."
+        401:
+          description: "Acesso não autorizado."
+      x-swagger-router-controller: "EmprestimoComCartao"
+  /simulacaoEmprestimo:
+    post:
+      tags:
+      - "Emprestimo com Cartao"
+      - "Default"
+      description: "Operação de simulação das condições de um empréstimo."
+      operationId: "simulacaoEmprestimoPOST"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "authenticationType"
+        in: "header"
+        description: "Tipo de autenticação requerida."
+        required: true
+        type: "string"
+        x-example: "auth2"
+      - name: "clientId"
+        in: "header"
+        description: "Identificação do cliente."
+        required: true
+        type: "string"
+        x-example: "prd-client"
+      - name: "token"
+        in: "header"
+        description: "Chave para validação do acesso ao serviço."
+        required: true
+        type: "string"
+        x-example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjYsInByb2ZpbGUiOltdLCJpYXQiOjE0OTkwOsY4NDV9.uR5WH3c2ZztGmZVCfcJPu-1ix1w-j7shJw_X_ZlFfAo"
+      - in: "body"
+        name: "body"
+        description: "Requisição de consulta parcelas de empréstimo."
+        required: true
+        schema:
+          $ref: "#/definitions/simulacaoEmprestimoReq"
+      responses:
+        200:
+          description: "Retorno com sucesso ou com Erro de negócio."
+          schema:
+            $ref: "#/definitions/simulacaoEmprestimoResp"
         400:
           description: "Bad Request ou Erro interno ao qual inviabilizou uma resposta."
         401:
@@ -1891,6 +1937,53 @@ definitions:
         codEstab: "000000000742673"
         tipo: "008"
         id: "05100004"
+  simulacaoEmprestimoReq:
+    type: "object"
+    required:
+    - "Cartao"
+    - "InfTransacao"
+    - "Terminal"
+    properties:
+      InfTransacao:
+        $ref: "#/definitions/infTransacaoReq"
+      Cartao:
+        $ref: "#/definitions/cartao"
+      Terminal:
+        $ref: "#/definitions/terminal"
+  simulacaoEmprestimoResp:
+    type: "object"
+    properties:
+      InfTransacao:
+        $ref: "#/definitions/infTransacaoResp"
+      Terminal:
+        $ref: "#/definitions/terminal"
+      Cripto:
+        $ref: "#/definitions/criptoResp"
+      InfSimulacaoEmprestimo:
+        $ref: "#/definitions/infSimulacaoEmprestimoResp"
+    example:
+      InfSimulacaoEmprestimo:
+        mensagem: "O pagamento sera em 4 prestacoes de  306,90     </Juros  6,29%\
+          \ CET (ao mes)   110,11% CET (ao ano)</"
+      InfTransacao:
+        cdProc: "029100"
+        mensagemCliente: "Esta &eacute; uma mensagem para exibi&ccedil;&atilde;o em\
+          \ tela."
+        nsu: "000080247206"
+        codMoeda: "986"
+        codOperadora: "00000000914"
+        dataLocal: "1122"
+        errorMessage: ""
+        valor: "5000"
+        horaLocal: "151032"
+        nsuResposta: "820"
+        dataHora: "1122151032"
+      Terminal:
+        codEstab: "000000000742673"
+        tipo: "008"
+        id: "05100004"
+      Cripto:
+        hash: "hash"
   recargaPrePagoReq:
     type: "object"
     required:
@@ -2473,11 +2566,14 @@ definitions:
   emprestimoResp:
     type: "object"
     required:
+    - "InfEmprestimo"
     - "InfTransacao"
     - "Terminal"
     properties:
       Cripto:
         $ref: "#/definitions/criptoResp"
+      InfEmprestimo:
+        $ref: "#/definitions/infEmprestimoResp"
       InfTransacao:
         $ref: "#/definitions/infTransacaoResp"
       Terminal:
@@ -2502,6 +2598,17 @@ definitions:
         codEstab: "000000000742673"
         tipo: "008"
         id: "05100004"
+      InfEmprestimo:
+        recibo: "@           COMPROVANTE DE EMPRESTIMO            @------------------------------------------------@\
+          \ Agencia....: 0101                              @ Conta......: 74414-0\
+          \                           @ Nome.......: EUGENIO SCHMITT COELHO      \
+          \      @@------------------------------------------------@ Favorecido: EUGENIO\
+          \ SCHMITT COELHO             @ Agencia Destino:                        \
+          \   0101@ Conta Destino:         Conta Corrente - 74414-0@@Tipo        \
+          \    NSU                        Valor@Dinheiro        697841472523     \
+          \        R$20,00@------------------------------------------------@     \
+          \          SAC - 0800 123 4569@      SAC - DEF. AUDITIVO - 0800 123 4568@\
+          \            OUVIDORIA - 0800 123 4567@@             www.siteparceiro.com.br@"
   extratoReq:
     type: "object"
     required:
@@ -2901,6 +3008,19 @@ definitions:
       - valorParcela: "000000005000"
         qntParcelas: "5"
       dataPrimeiraParcela: "20181122"
+  infSimulacaoEmprestimoResp:
+    type: "object"
+    properties:
+      mensagem:
+        type: "string"
+        example: "O pagamento sera em 4 prestacoes de  306,90     </Juros  6,29% CET\
+          \ (ao mes)   110,11% CET (ao ano)</"
+        description: "Mensagem informativa para ser mostrada ao cliente após a simulaç\
+          ão. Os caracteres \"</\" indicam uma quebra de linha."
+    description: "Informações da resposta da requisição de simulação de empréstimo."
+    example:
+      mensagem: "O pagamento sera em 4 prestacoes de  306,90     </Juros  6,29% CET\
+        \ (ao mes)   110,11% CET (ao ano)</"
   installmentsOptionObj:
     type: "object"
     required:
@@ -3675,6 +3795,37 @@ definitions:
         description: "Quantidade de parcelas."
         pattern: "^\\d+$"
     description: "Informações da requisição de empréstimo."
+  infEmprestimoResp:
+    type: "object"
+    required:
+    - "recibo"
+    properties:
+      recibo:
+        type: "string"
+        example: "@           COMPROVANTE DE EMPRESTIMO            @------------------------------------------------@\
+          \ Agencia....: 0101                              @ Conta......: 74414-0\
+          \                           @ Nome.......: EUGENIO SCHMITT COELHO      \
+          \      @@------------------------------------------------@ Favorecido: EUGENIO\
+          \ SCHMITT COELHO             @ Agencia Destino:                        \
+          \   0101@ Conta Destino:         Conta Corrente - 74414-0@@Tipo        \
+          \    NSU                        Valor@Dinheiro        697841472523     \
+          \        R$20,00@------------------------------------------------@     \
+          \          SAC - 0800 123 4569@      SAC - DEF. AUDITIVO - 0800 123 4568@\
+          \            OUVIDORIA - 0800 123 4567@@             www.siteparceiro.com.br@"
+        description: "Recibo com informações do depósito efetuado. Linhas com 48 posiç\
+          ões separadas por \"@\"."
+        pattern: "^[^@]{0,48}(\\@[^@]{0,48})*$"
+    description: "Informações sobre a resposta de requisição de empréstimo."
+    example:
+      recibo: "@           COMPROVANTE DE EMPRESTIMO            @------------------------------------------------@\
+        \ Agencia....: 0101                              @ Conta......: 74414-0  \
+        \                         @ Nome.......: EUGENIO SCHMITT COELHO          \
+        \  @@------------------------------------------------@ Favorecido: EUGENIO\
+        \ SCHMITT COELHO             @ Agencia Destino:                          \
+        \ 0101@ Conta Destino:         Conta Corrente - 74414-0@@Tipo            NSU\
+        \                        Valor@Dinheiro        697841472523             R$20,00@------------------------------------------------@\
+        \               SAC - 0800 123 4569@      SAC - DEF. AUDITIVO - 0800 123 4568@\
+        \            OUVIDORIA - 0800 123 4567@@             www.siteparceiro.com.br@"
   infExtratoReq:
     type: "object"
     properties:
