# controllers/EmprestimoComCartao.js
@@ -73,6 +73,20 @@ module.exports.identificacaoPOST = function identificacaoPOST (req, res, next) {
     });
 };
 
+module.exports.simulacaoEmprestimoPOST = function simulacaoEmprestimoPOST (req, res, next) {
+  var authenticationType = req.swagger.params['authenticationType'].value;
+  var clientId = req.swagger.params['clientId'].value;
+  var token = req.swagger.params['token'].value;
+  var body = req.swagger.params['body'].value;
+  EmprestimoComCartao.simulacaoEmprestimoPOST(authenticationType,clientId,token,body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.tokenPOST = function tokenPOST (req, res, next) {
   var authenticationType = req.swagger.params['authenticationType'].value;
   var clientId = req.swagger.params['clientId'].value;
